--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<h1>
+<h1 class="container spacer">
   {{title}}
 </h1>
 <div>
-  <router-outlet></router-outlet>
+  <!--app-weatherdaten></app-weatherdaten-->
+<router-outlet></router-outlet>
 </div>
 
