--- a/src/app/weather-favoriten-information/weather-favoriten-information.component.html
+++ b/src/app/weather-favoriten-information/weather-favoriten-information.component.html
@@ -1,5 +1,5 @@
 <p>
-  weather-favoriten-information works!
+  weather-favoriten-information!
 </p>
 
 <table class="table table-striped">
@@ -43,3 +43,5 @@
     </tr>
   </tbody>
 </table>
+<button class="btn btn-success"  type="submit">Speichern</button> 
+<button class="btn btn-primary"  type="submit" (click)="onNavigate()">zurück zur Startseite</button>
