--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,11 @@
   {{title}}
 </h1>
 <div>
-  <!--app-weatherdaten></app-weatherdaten-->
+  <nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/addweathercity">Weather</a>
+
+  </nav>
 <router-outlet></router-outlet>
 </div>
 
