Search, Save von City name umgesetzt

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<h3>Lists Weather from City</h3>
+<!--h3>Lists Weather from City</h3>
 <div class="grid grid-pad">
   <a *ngFor="let w of weather" class="col-1-4"
       routerLink="/detail/{{w.name}}">
@@ -7,5 +7,5 @@
     </div>
   </a>
 </div>
-
+<br/-->
 <app-search-weatherdata></app-search-weatherdata>
