--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,16 @@
-<h1 class="container spacer">
-  {{title}}
-</h1>
-<div>
-  <nav>
-    <a routerLink="/dashboard">Dashboard</a>
-    <a routerLink="/addweathercity">Weather</a>
-
-  </nav>
-<router-outlet></router-outlet>
+<div class="container">
+    <div class="panel panel-primary">
+   
+   <h1 class="container spacer">
+      {{title}}
+    </h1>
+    <div>
+      <nav>
+        <a routerLink="/dashboard">Dashboard</a>
+        <a routerLink="/addweathercity">Weather</a>
+      </nav>
+    <router-outlet></router-outlet>
+    </div>
+    </div>
 </div>
 
