--- a/src/app/weatherdaten/weatherdaten.component.css
+++ b/src/app/weatherdaten/weatherdaten.component.css
@@ -1,4 +1,4 @@
-/* HeroesComponent's private CSS styles */
+/* WeatherComponent's private CSS styles */
 .weather {
     margin: 0 0 2em 0;
     list-style-type: none;
