--- a/src/app/weatherdaten/weatherdaten.component.css
+++ b/src/app/weatherdaten/weatherdaten.component.css
@@ -33,6 +33,14 @@
     color:#607D8B;
   }
   
+  .weather input {
+    color: #333;
+    text-decoration: none;
+    position: relative;
+    display: block;
+    width: 550px;
+  }
+
   .weather .badge {
     display: inline-block;
     font-size: small;
