--- a/src/app/weatherdaten/weatherdaten.component.html
+++ b/src/app/weatherdaten/weatherdaten.component.html
@@ -1,62 +1,18 @@
-<h2>My Weather</h2>
-
-<div>
-  <label>Weather City name:
-    <input #weatherName />
-  </label>
-  <!-- (click) passes input value to add() and then clears the input -->
-  <button (click)="add(weatherName.value); weatherName.value=''">
-    add
-  </button>
-</div>
-
-<ul class="Weather">
-  <li *ngFor="let w of Weather?.docs">
-    <a routerLink="/detail/{{w.name}}">
-      <span class="badge">{{w.name}}</span> {{w.id}}
-    </a>
+<div class="container">
+<div class="panel panel-primary">
+  <ul class="weather">
+    <li *ngFor="let w of weather$">
+      <a routerLink="/detail/{{w.name}}">
+        <span class="badge">{{w.name}}</span> {{w.id}}
+      </a>
     </li>
-</ul>
-
-
-<!--div>
-  <label>Weather name:
-    <input #weatherName />
-  </label-->
-  <!-- (click) passes input value to add() and then clears the input -->
-  <!--button (click)="add(weatherName.value); weatherName.value=''">
-    add
-  </button>
+  </ul>
+  <button (click)="saveListFavorite()">save Favorite</button>
+</div>
 </div>
 
-<ul class="weathers">
-  <li *ngFor="let w of Weather">
-    <a routerLink="/detail/{{w.name}}">
-      <span class="badge">{{w.name}}</span> {{hero.id}}
-    </a-->
-    <!--button class="delete" title="delete hero"
-      (click)="delete(hero)">x</button-->
-  <!--/li>
-</ul-->
 
 
-<!--div class="container">
-  <div class="panel panel-primary">
-   <div>
-        <input [formControl]="inputField" type="text"  placeholder="city name search"/>
-        <p>name: {{inputField.value}}</p>
-        <div>
-          <button class="btn btn-primary" type="button"  routerLink="/weathercityInfo/{{results.name}}" >
-          </button>
-        </div>
-    </div>
-   
-  </div>
-  <app-weather-favoriten-information></app-weather-favoriten-information>
-</div-->
-
-
-<!--app-weather-city-information></app-weather-city-information-->
           
  
 
