--- a/src/app/weatherdetail/weatherdetail.component.html
+++ b/src/app/weatherdetail/weatherdetail.component.html
@@ -120,27 +120,15 @@
             </label>
           </div>
           <div>
-            <label>weatherId:
-              <input #weatherId [(ngModel)]="weather.weatherId" placeholder="weatherId city"/>
-            </label>
-          </div>
-          <div>
             <label> Check Favorite: 
               <input #favorite id="favoriteCheckbox" type="checkbox"  [checked] ="weather.favorite" 
                 (change)="onFavoriteChanged(favorite.checked)" required/>
             </label>
           </div>
         
-
           <button (click)="goBack()">go back</button>
-          <button (click)="save()" [(ngModel)]="weather.favorite">save</button>
-          <!-- (click) passes input value to add() and then clears the input 
-          -->
-          <div>
-              <button (click)="addFavorite()">
-                add Favorite
-              </button>
-          </div>
+          <button (click)="addFavorite()"> add Favorite </button>
+         
         </div>
   </div>
 </div>
