--- a/src/app/search-weatherdata/search-weatherdata.component.html
+++ b/src/app/search-weatherdata/search-weatherdata.component.html
@@ -4,8 +4,7 @@
           <h3><label for="search-box">Weather Search</label></h3>
 
           <input #searchBox id="search-box" (input)="search(searchBox.value)" placeholder="name city" required />
-          <button (click)="getCity(searchBox.value); searchBox.value=''"> search
-          </button>
+          <button (click)="getCity(searchBox.value); searchBox.value=''"> search</button>
         </div>
     </div>
 </div>
