--- a/src/app/search-weatherdata/search-weatherdata.component.html
+++ b/src/app/search-weatherdata/search-weatherdata.component.html
@@ -1,10 +1,6 @@
-<div class="container">
-    <div class="panel panel-primary">
-        <div id="search-component">
-          <h3><label for="search-box">Weather Search</label></h3>
 
-          <input #searchBox id="search-box" (input)="search(searchBox.value)" placeholder="name city" required />
-          <button (click)="getCity(searchBox.value); searchBox.value=''"> search</button>
-        </div>
-    </div>
-</div>
+          <h3><label for="search-box">Weather City Search</label></h3>
+     
+           <app-feld-input></app-feld-input>
+         
+    
