--- a/src/app/weatherdetail/weatherdetail.component.css
+++ b/src/app/weatherdetail/weatherdetail.component.css
@@ -19,6 +19,7 @@ label {
     padding: 5px 10px;
     border-radius: 4px;
     cursor: pointer; cursor: hand;
+    margin:5px;
   }
   button:hover {
     background-color: #cfd8dc;
